--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     height: 50px;
-    background-color: rgb(19, 19, 19);
+    background-color: gray;
     display: flex;
     justify-content: flex-end;
     align-items: center;
