--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -7,7 +7,7 @@
 .checkout button {
     width: 150px;
     height: 50px;
-    background-color: black;
+    background-color: grey;
     color: aquamarine;
     border-radius: 8px;
     border: none;
